--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - backend_pgdata:/var/lib/postgresql/data
     ports:
       - "${POSTGRES_PORT}:5432"
 
@@ -53,4 +53,5 @@ services:
       "
 
 volumes:
-  pgdata:
+  backend_pgdata:
+    external: true
