fixing frontend conneciton and using smaller model

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
     command: >
       "ollama serve &
       sleep 10 &&
-      (ollama list | grep llama3.2 || ollama pull llama3.2:latest) &&
+      (ollama list | grep tinyllama || ollama pull tinyllama:1.1b) &&
       wait"
 
   twitter-webhook:
@@ -90,6 +90,21 @@ services:
       bash -c "\
       sleep 10 && \
       python driver.py
+      "
+
+  dashboard:
+    image: node:18-alpine
+    container_name: dashboard-frontend
+    restart: always
+    working_dir: /app
+    volumes:
+      - ./dashboard:/app
+    ports:
+      - "3000:3000"
+    command: |-
+      sh -c "\
+      npm install && \
+      npm run dev
       "
 
 volumes:
